--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,10 +1,10 @@
-﻿{
+{
     "iisSettings": {
         "windowsAuthentication": false,
         "anonymousAuthentication": true,
         "iisExpress": {
-            "applicationUrl": "http://localhost:56397",
-            "sslPort": 44311
+            "applicationUrl": "http://localhost:5050",
+            "sslPort": 0
         }
     },
     "profiles": {
@@ -19,10 +19,10 @@
         "MCS_oneday_intern": {
             "commandName": "Project",
             "launchBrowser": true,
-            "applicationUrl": "https://localhost:5001;http://localhost:5000",
             "environmentVariables": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
-            }
+            },
+            "applicationUrl": "http://localhost:5000"
         }
     }
 }
